# Active-Video-Acquisition

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train_policy.py
.github/: CODEOWNERS
.github/workflows/: lint.yml  test.yml
envs/: __init__.py  classification_env.py  detection_env.py
envs/trainers/: __init__.py  frcnn_trainer.py  resnet_trainer.py
envs/utils/: feature_compression.py  feature_extractor.py  federated_learning.py
models/: __init__.py
models/agents/: __init__.py  actor_critic.py  memory_buffer.py
models/classifiers/: __init__.py  cnn.py  resnet.py  vgg.py  vit.py
models/detectors/: __init__.py  frcnn.py
utils/: __init__.py  forward_cache.py  logger.py  prefetcher.py  tensorboard.py  time.py  utils.py
videos/: __init__.py  common.py  core50.py  mot15.py  visdrone.py
